@@ -1,3 +1,4 @@
+ - Initialize entities in MeshEntity constructor automatically and check range
  - Add unit tests to the memorycheck
  - Add call to clean up libxml2 parser at exit
  - Remove unecessary arguments in DofMap member functions
